fix styles for home footer and vue slider overlapping

--- a/src/assets/sass/website/app.scss
+++ b/src/assets/sass/website/app.scss
@@ -3,6 +3,9 @@
 html {
   overflow-x: hidden;
 }
+body {
+  background-color: $accent !important;
+}
 
 .app-wrapper {
   font-family: "Roboto";
