--- a/src/assets/sass/website/containers/home.scss
+++ b/src/assets/sass/website/containers/home.scss
@@ -4,6 +4,7 @@
 
 .home-wrapper {
   height: 100vh;
+  min-height: 100vh;
   overflow-y: auto;
   overflow-x: hidden;
   &::-webkit-scrollbar {
